Added styling to line up with prototypes

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,12 @@
 
 @import "custom";
+@import url('https://fonts.googleapis.com/css2?family=Khula:wght@300&display=swap');
+
+body {
+  font-family: 'Khula', sans-serif;
+}
+
+.banner-title {
+  font-size: 6rem;
+  text-align: center;
+}
