Fleshed out new submission page & added word counter

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,10 +1,14 @@
 $primary: #f5b342;
 $dark: #424242;
+$light: #fffbee;
 
 $body-bg: $dark;
 $body-color: $primary;
 $card-color: $dark;
-$card-bg: #fffbee;
+$card-bg: $light;
+$input-color: $dark;
+$input-bg: $light;
+$form-text-color: $primary;
 
 $table-bg-scale: -50%;
 
