Added scss for focussing on links

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -31,6 +31,12 @@ $table-bg-scale: -50%;
 
 a {
   transition: color .15s ease-in;
+  text-decoration: none;
+
+  &:focus, &:hover {
+    color: $primary-darken;
+    text-decoration: underline;
+  }
 }
 
 .btn-primary {
