Added link scss to sort button

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -29,7 +29,7 @@ $table-bg-scale: -50%;
   text-overflow: ellipsis;
 }
 
-a {
+a, .btn-link {
   transition: color .15s ease-in;
   text-decoration: none;
 
