--- a/src/scss/icons.scss
+++ b/src/scss/icons.scss
@@ -7,7 +7,8 @@
 .bi-caret-up-fill {
   fill: #8fa71a;
 
-  &:hover, &:focus {
+  &:hover,
+  &:focus {
     fill: #7e9219;
   }
 }
@@ -16,7 +17,8 @@
 .bi-caret-down-fill {
   fill: #d81b60;
 
-  &:hover, &:focus {
+  &:hover,
+  &:focus {
     fill: #b31851;
   }
 }
