--- a/src/App.scss
+++ b/src/App.scss
@@ -15,6 +15,11 @@ nav {
   margin-left: 12.5%;
 }
 
+.subtle {
+  color: $light;
+  font-size: 0.85rem;
+}
+
 // Bootstrap "lg" breakpoint
 @media (min-width: 992px) {
   .banner-title {
