Added scss for modal rendering

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -11,6 +11,8 @@ $card-bg: $light;
 $input-color: $dark;
 $input-bg: $light;
 $form-text-color: $primary;
+$modal-content-color: $dark;
+$modal-content-bg: $light;
 
 $table-bg-scale: -50%;
 
